--- a/PressPractice.html
+++ b/PressPractice.html
@@ -91,12 +91,12 @@
 									</p>
 			</div>
 			
-			<img src = "psp-images/kofi.png"     class = "clone" id = "kofi" alt = "clone">
-			<img src = "psp-images/jmaine.png"   class = "clone" id = "jmain" alt = "clone">
-			<img src = "psp-images/erica.png"    class = "clone" id = "erica" alt = "clone">
-			<img src = "psp-images/jackmove.png" class = "clone" id = "jackmove" alt = "clone">
-			<img src = "psp-images/alex.png"     class = "clone" id = "alex" alt = "clone">
-			<img src = "psp-images/guest.png"    class = "clone" id = "guest" alt = "clone">
+			<img src = "psp-images/kofi.PNG"     class = "clone" id = "kofi" alt = "clone">
+			<img src = "psp-images/jmaine.PNG"   class = "clone" id = "jmain" alt = "clone">
+			<img src = "psp-images/erica.PNG"    class = "clone" id = "erica" alt = "clone">
+			<img src = "psp-images/jackmove.PNG" class = "clone" id = "jackmove" alt = "clone">
+			<img src = "psp-images/alex.PNG"     class = "clone" id = "alex" alt = "clone">
+			<img src = "psp-images/guest.PNG"    class = "clone" id = "guest" alt = "clone">
 			
 			<img src = "psp-images/arrow.png"     class = "backButton" alt = "backButton">
 		
@@ -114,7 +114,7 @@
 	  
 	  <a href= "#" class = "featured">Featured Video<img src = "psp-images/sealOfQuality.jpg" class = "promoLeft"></a>
 	  
-	  <a href = "PressStartPractice-Merchandise.html" class = "extras">RDR2 Holiday Sale<img src = "psp-images/shirt.png" class = "promoRight">
+	  <a href = "PressStartPractice-Merchandise.html" class = "extras">RDR2 Holiday Sale<img src = "psp-images/shirt.PNG" class = "promoRight">
 										<img src = "psp-images/giddyup.png" class = "promoMan">
 										<img src = "psp-images/phrase2.png" class = "promoPhrase">
 	  </a>
