--- a/PressStartPractice-Merchandise.html
+++ b/PressStartPractice-Merchandise.html
@@ -3,7 +3,7 @@
     <head>
         
         <title>PressStartPractice-Merchandise </title>
-            <link rel="icon" type="image/jpg" href="psp-images/Logo.jpg">
+            <link rel="icon" type="image/jpg" href="psp-images/Logo.png">
 		
 		<link rel="stylesheet" type="text/css" href="members.css">
         <link rel="stylesheet" type="text/css" href="PressStartPractice-MerchandiseCSS.css">
@@ -53,7 +53,7 @@
 		
 		<div class = "items">
 			
-			<div class = "whole shirt"><img src = "psp-images/shirt.png" class = "product shirt">
+			<div class = "whole shirt"><img src = "psp-images/shirt.PNG" class = "product shirt">
 				<div class = "item no1" value = "$10">
 					<div class = "productName">RD2 Shirt</div>
 					<div class = "price">Price: $10</div>
@@ -80,7 +80,7 @@
 				</div>
 			</div>
 			
-			<div class = "whole extra"><img src = "psp-images/pressStartCup.png" class = "product extra">
+			<div class = "whole extra"><img src = "psp-images/pressStartCup.PNG" class = "product extra">
 				<div class = "item no4" value = "$15">	
 					<div class = "productName">Press Start Your Day</div>
 					<div class = "price">Price: $15</div>
