--- a/PressStartPractice-Episodes.html
+++ b/PressStartPractice-Episodes.html
@@ -100,7 +100,7 @@
 	  
 	  <a href= "#" class = "featured">Featured Video<img src = "psp-images/sealOfQuality.jpg" class = "promoLeft"></a>
 	  
-	  <a href = "PressStartPractice-Merchandise.html" class = "extras">RDR2 Holiday Sale<img src = "psp-images/shirt.png" class = "promoRight">
+	  <a href = "PressStartPractice-Merchandise.html" class = "extras">RDR2 Holiday Sale<img src = "psp-images/shirt.PNG" class = "promoRight">
 										<img src = "psp-images/giddyup.png" class = "promoMan">
 										<img src = "psp-images/phrase1.png" class = "promoPhrase">
 	  </a>
