--- a/PressStartPractice-Episodes.html
+++ b/PressStartPractice-Episodes.html
@@ -46,7 +46,7 @@
 				<li><a href = "/#"> Patron Prizes(PP's)</a></li>
 				<li><a href = "#"> Feedback </a></li>
 				<li><a href = "#"> Fanfics </a></li>		
-				<li><a href = "#"> Merchandise </a></li>
+				<li><a href = "PressStartPractice-Merchandise.html"> Merchandise </a></li>
 			</ul>	
 	
 	<div class = "wrapper">
