--- a/PressPractice.html
+++ b/PressPractice.html
@@ -34,14 +34,14 @@
 	<div class = "header">
 	<a href = "PressPractice.html"><img src = "psp-images/Logo.png" class = "logo"> </a>
 	</div>
-				
+			
 			<ul class = "navbar">
 				<li><a href = "PressStartPractice-Episodes.html"> Episodes </a></li>
-				<li><a href = "/reviews"> Reviews </a></li>
-				<li><a href = "/previous guests"> Guests </a></li>
-				<li><a href = "/previous guests"> Patron Prizes(PP's)</a></li>
-				<li><a href = "/comments"> Feedback </a></li>
-				<li><a href = "/fanfics"> Fanfics </a></li>		
+				<li><a href = "#"> Reviews </a></li>
+				<li><a href = "#"> Guests </a></li>
+				<li><a href = "#"> Patron Prizes(PP's)</a></li>
+				<li><a href = "#"> Feedback </a></li>
+				<li><a href = "#"> Fanfics </a></li>		
 				<li><a href = "PressStartPractice-Merchandise.html"> Merchandise </a></li>
 			</ul>	
 	
