--- a/PressStartPractice-Merchandise.html
+++ b/PressStartPractice-Merchandise.html
@@ -39,11 +39,11 @@
 			
 			<ul class = "navbar">
 				<li><a href = "PressStartPractice-Episodes.html"> Episodes </a></li>
-				<li><a href = "/reviews"> Reviews </a></li>
-				<li><a href = "/previous guests"> Guests </a></li>
-				<li><a href = "/previous guests"> Patron Prizes(PP's)</a></li>
-				<li><a href = "/comments"> Feedback </a></li>
-				<li><a href = "/fanfics"> Fanfics </a></li>		
+				<li><a href = "#"> Reviews </a></li>
+				<li><a href = "#"> Guests </a></li>
+				<li><a href = "#"> Patron Prizes(PP's)</a></li>
+				<li><a href = "#"> Feedback </a></li>
+				<li><a href = "#"> Fanfics </a></li>		
 				<li><a href = "PressStartPractice-Merchandise.html"> Merchandise </a></li>
 			</ul>	
 	
