--- a/PressPractice.html
+++ b/PressPractice.html
@@ -26,6 +26,7 @@
 		}else{
 		alert("The content of this site is in no way my own. I do not own the images, videos, or anything otherwise this site");
 		alert("It is purely made for practice/parody. Any and all functionality is strictly superficial for that end");
+		alert("Only 'Members' 'Merchandise' And 'Home'(Logo) work. The rest are not done");
 		alert("If you understand this, please proceed");
 		}
 	
