--- a/PressStartPractice-Episodes.html
+++ b/PressStartPractice-Episodes.html
@@ -29,6 +29,7 @@
 		}else{
 		alert("The content of this site is in no way my own. I do not own the images, videos, or anything otherwise this site");
 		alert("It is purely made for practice/parody. Any and all functionality is strictly superficial for that end");
+		alert("Only 'Members' 'Merchandise' And 'Home'(Logo) work. The rest are not done");
 		alert("If you understand this, please proceed");
 		}
 	
@@ -43,7 +44,7 @@
 				<li><a href = "PressStartPractice-Episodes.html"> Episodes </a></li>
 				<li><a href = "#"> Reviews </a></li>
 				<li><a href = "#"> Guests </a></li>
-				<li><a href = "/#"> Patron Prizes(PP's)</a></li>
+				<li><a href = "#"> Patron Prizes(PP's)</a></li>
 				<li><a href = "#"> Feedback </a></li>
 				<li><a href = "#"> Fanfics </a></li>		
 				<li><a href = "PressStartPractice-Merchandise.html"> Merchandise </a></li>
