--- a/PressStartPractice-Merchandise.html
+++ b/PressStartPractice-Merchandise.html
@@ -72,7 +72,7 @@
 				</div>
 			</div>
 			
-			<div class = "whole glasses"><img src = "psp-images/yikesglasses.png" class = "product ">
+			<div class = "whole glasses"><img src = "psp-images/yikesglasses.PNG" class = "product ">
 				<div class = "item no3" value = "$100">
 					<div class = "productName">Yikes Glasses</div>
 					<div class = "price">Price: $100</div>
