--- a/PressPractice.html
+++ b/PressPractice.html
@@ -3,7 +3,7 @@
     <head>
         
         <title>PressStartPractice </title>
-            <link rel="icon" type="image/jpg" href="psp-images/Logo.jpg">
+            <link rel="icon" type="image/jpg" href="psp-images/Logo.png">
 
 		<link rel="stylesheet" type="text/css" href="members.css">
         <link rel="stylesheet" type="text/css" href="PressPracticeCSS.css">
