--- a/PressStartPractice-Episodes.html
+++ b/PressStartPractice-Episodes.html
@@ -3,7 +3,7 @@
     <head>
         
         <title> PressStartPractice-Episodes </title>
-            <link rel="icon" type="image/jpg" href="psp-images/Logo.jpg">
+            <link rel="icon" type="image/jpg" href="psp-images/Logo.png">
 
 		<link rel="stylesheet" type="text/css" href="members.css">
         <link rel="stylesheet" type="text/css" href="PressPracticeCSS-Episodes.css">
