--- a/PressPractice.html
+++ b/PressPractice.html
@@ -2,6 +2,9 @@
 
     <head>
         
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	    
         <title>PressStartPractice </title>
             <link rel="icon" type="image/jpg" href="psp-images/Logo.png">
 
