--- a/PressPractice.html
+++ b/PressPractice.html
@@ -1,1 +1,135 @@
+<html>
 
+    <head>
+        
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	    
+        <title>PressStartPractice </title>
+            <link rel="icon" type="image/jpg" href="psp-images/Logo.png">
+
+		<link rel="stylesheet" type="text/css" href="members.css">
+        <link rel="stylesheet" type="text/css" href="PressPracticeCSS.css">
+		
+		<link href="https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">
+	
+	<script type = "text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script type = "text/javascript" src="jquery.min.js"></script>
+	
+    </head>
+
+	<body>
+	
+	<script type = "text/javascript">
+	
+		if(typeof jQuery == "undefined"){
+			alert("not installed");
+		}else{
+		alert("The content of this site is in no way my own. I do not own the images, videos, or anything otherwise this site");
+		alert("It is purely made for practice/parody. Any and all functionality is strictly superficial for that end");
+		alert("Only 'Members' 'Merchandise' And 'Home'(Logo) work. The rest are not done");
+		alert("If you understand this, please proceed");
+		}
+	
+	</script>
+	
+	<div class = "header">
+	<a href = "PressPractice.html"><img src = "psp-images/Logo.png" class = "logo"> </a>
+	</div>
+			
+			<ul class = "navbar">
+				<li><a href = "PressStartPractice-Episodes.html"> Episodes </a></li>
+				<li><a href = "#"> Reviews </a></li>
+				<li><a href = "#"> Guests </a></li>
+				<li><a href = "#"> Patron Prizes(PP's)</a></li>
+				<li><a href = "#"> Feedback </a></li>
+				<li><a href = "#"> Fanfics </a></li>		
+				<li><a href = "PressStartPractice-Merchandise.html"> Merchandise </a></li>
+			</ul>	
+	
+    <div class = "wrapper"> 
+
+		<div class = "box content">
+			
+			<div class = "bio"> insert name here </div>
+			<div class = "description one">Creator of PressStartPodcast<br/>
+									<br/> "Nintendo", "Sony", "Microsoft", "PC" Fanboy<br/>
+									<br/> Adopted by BG. Born in Canadia<br/>
+									<br/> GOTY: Spider-Man(PS4): Insomniac Strike Edition						
+			</div>	
+
+			<div class = "description two"><p> Deuteragonist <br/>
+									<br/> Does stupid shit<br/>
+									<br/> But he does it for the community<br/>
+									<br/> He always looks mad nervous <br/>
+									<br/> GOTY: Abzu/Gone Home
+									</p>
+			</div>
+			
+			<div class = "description three"><p> #YikesSquad (patent pending)<br/>
+									<br/> Beat more games than Jmaine this year<br/>
+									<br/> That RD2 clip... #I'mAMenace<br/>
+									<br/> GOTY: Super Smash Bros. Ultimate
+									</p>
+			</div>
+			
+			<div class = "description four"><p>Crossover character extrodinaire<br/>
+									<br/>If you have a podcast, he's probably been on it<br/>
+									<br/> Ironically the last one you want beef with<br/>
+									<br/> GOTY: Sonic Adventure 2
+									</p>
+			</div>
+			
+			<div class = "description five"><p> Best member of the podcast<br/>
+									<br/> Still can be suss though<br/>
+									<br/> Reaction to MGR's senator speech? 10/10<br/>
+									<br/> Business As Usual<br/>
+									<br/> GOTY: Counter Strike
+									</p> 
+			</div>
+			
+			<div class = "description six"><p> Guest
+									<br/> You have to add this yourself 
+									</p>
+			</div>
+			
+			<img src = "psp-images/kofi.PNG"     class = "clone" id = "kofi" alt = "clone">
+			<img src = "psp-images/jmaine.PNG"   class = "clone" id = "jmain" alt = "clone">
+			<img src = "psp-images/erica.PNG"    class = "clone" id = "erica" alt = "clone">
+			<img src = "psp-images/jackmove.PNG" class = "clone" id = "jackmove" alt = "clone">
+			<img src = "psp-images/alex.PNG"     class = "clone" id = "alex" alt = "clone">
+			<img src = "psp-images/guest.png"    class = "clone" id = "guest" alt = "clone">
+			
+			<img src = "psp-images/arrow.png"     class = "backButton" alt = "backButton">
+		
+		</div>
+
+	  		<ul class = "navbarBottom">
+				<li><a href = "PressStartPractice-Episodes.html"> Episodes </a></li>
+				<li><a href = "/reviews"> Reviews </a></li>
+				<li><a href = "/previous guests"> Previous Guests </a></li>
+				<li><a href = "/previous guests"> Patron Prizes(PP's)</a></li>
+				<li><a href = "/comments"> Feedback </a></li>
+				<li><a href = "/fanfics"> Fanfics </a></li>		
+				<li><a href = "PressStartPractice-Merchandise.html"> Merchandise </a></li>
+			</ul>
+	  
+	  <a href= "#" class = "featured">Featured Video<img src = "psp-images/sealOfQuality.jpg" class = "promoLeft"></a>
+	  
+	  <a href = "PressStartPractice-Merchandise.html" class = "extras">RDR2 Holiday Sale<img src = "psp-images/shirt.PNG" class = "promoRight">
+										<img src = "psp-images/giddyup.png" class = "promoMan">
+										<img src = "psp-images/phrase2.png" class = "promoPhrase">
+	  </a>
+	  
+	  <div class = "box footer"></div>
+	
+	 </div>
+	 
+	 
+	<script type="text/javascript" src="member.js"></script>
+
+    </body>
+
+</html>
