--- a/PressPractice.html
+++ b/PressPractice.html
@@ -8,7 +8,8 @@
         <title>PressStartPractice </title>
             <link rel="icon" type="image/jpg" href="psp-images/Logo.png">
 
-	
+		<link rel="stylesheet" type="text/css" href="members.css">
+                <link rel="stylesheet" type="text/css" href="PressPracticeCSS.css">
 		
 		<link href="https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
