--- a/PressPractice.html
+++ b/PressPractice.html
@@ -93,12 +93,12 @@
 									</p>
 			</div>
 			
-			<img src = "psp-images/kofi.png"     class = "clone" id = "kofi" alt = "clone">
-			<img src = "psp-images/jmaine.png"   class = "clone" id = "jmain" alt = "clone">
-			<img src = "psp-images/erica.png"    class = "clone" id = "erica" alt = "clone">
-			<img src = "psp-images/jackmove.png" class = "clone" id = "jackmove" alt = "clone">
-			<img src = "psp-images/alex.png"     class = "clone" id = "alex" alt = "clone">
-			<img src = "psp-images/guest.png"    class = "clone" id = "guest" alt = "clone">
+			<img src = "psp-images/kofi.PNG"     class = "clone" id = "kofi" alt = "clone">
+			<img src = "psp-images/jmaine.PNG"   class = "clone" id = "jmain" alt = "clone">
+			<img src = "psp-images/erica.PNG"    class = "clone" id = "erica" alt = "clone">
+			<img src = "psp-images/jackmove.PNG" class = "clone" id = "jackmove" alt = "clone">
+			<img src = "psp-images/alex.PNG"     class = "clone" id = "alex" alt = "clone">
+			<img src = "psp-images/guest.PNG"    class = "clone" id = "guest" alt = "clone">
 			
 			<img src = "psp-images/arrow.png"     class = "backButton" alt = "backButton">
 		
