--- a/PressPractice.html
+++ b/PressPractice.html
@@ -98,7 +98,7 @@
 			<img src = "psp-images/erica.PNG"    class = "clone" id = "erica" alt = "clone">
 			<img src = "psp-images/jackmove.PNG" class = "clone" id = "jackmove" alt = "clone">
 			<img src = "psp-images/alex.PNG"     class = "clone" id = "alex" alt = "clone">
-			<img src = "psp-images/guest.PNG"    class = "clone" id = "guest" alt = "clone">
+			<img src = "psp-images/guest.png"    class = "clone" id = "guest" alt = "clone">
 			
 			<img src = "psp-images/arrow.png"     class = "backButton" alt = "backButton">
 		
