--- a/PressPractice.html
+++ b/PressPractice.html
@@ -118,7 +118,7 @@
 	  
 	  <a href = "PressStartPractice-Merchandise.html" class = "extras">RDR2 Holiday Sale<img src = "psp-images/shirt.png" class = "promoRight">
 										<img src = "psp-images/giddyup.png" class = "promoMan">
-										<img src = "psp-images/phrase2.png" class = "promoPhrase">
+										<img src = "psp-images/phrase2.PNG" class = "promoPhrase">
 	  </a>
 	  
 	 
