--- a/PressPractice.html
+++ b/PressPractice.html
@@ -116,9 +116,9 @@
 	  
 	  <a href= "#" class = "featured">Featured Video<img src = "psp-images/sealOfQuality.jpg" class = "promoLeft"></a>
 	  
-	  <a href = "PressStartPractice-Merchandise.html" class = "extras">RDR2 Holiday Sale<img src = "psp-images/shirt.png" class = "promoRight">
-										<img src = "psp-images/giddyup.png" class = "promoMan">
-										<img src = "psp-images/phrase2.PNG" class = "promoPhrase">
+	  <a href = "PressStartPractice-Merchandise.html" class = "extras">RDR2 Holiday Sale<img src = "psp-images/shirt.PNG" class = "promoRight">
+										<img src = "psp-images/giddyup.PNG" class = "promoMan">
+										<img src = "psp-images/phrase2.png" class = "promoPhrase">
 	  </a>
 	  
 	 
