--- a/PressStartPractice-Merchandise.html
+++ b/PressStartPractice-Merchandise.html
@@ -1,7 +1,9 @@
 <html>
 
     <head>
-        
+    	
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
         <title>PressStartPractice-Merchandise </title>
             <link rel="icon" type="image/jpg" href="psp-images/Logo.png">
 		
